# datacula

./: .gitignore  pyproject.toml  readme  readme.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: codeowners
.github/workflows/: lint.yaml  test.yaml
data/SMPS_data/: 2022-07-03_065141_SMPS.csv
datacula/: __init__.py  convert.py  import_interface.py  lake.py  loader.py  loader_interface.py  merger.py  mie.py  plot.py  processer.py  settings_generator.py  size_distribution.py  stats.py  stream.py  stream_processes.py  time_manage.py
datacula/lake/: datalake.py  datastream.py  plot.py  processer.py
datacula/live/: client_file_sync.py  data_imports.py  file_sync.py  file_sync_settings.json  main_data_save.py  server.py  server_data.py
datacula/test/: convert_test.py  get_test_datapy  import_interface_test.py  loader_interface_test.py  loader_test.py  merger_test.py  stats_test.py  stream_test.py  test_data.py  time_manage_test.py
docs/: CONTRIBUTING.md
docs/examples/: Example_DataLake.ipynb  Example_DataStream.ipynb  Example_DataStream_loading.ipynb  Example_DataStream_loading.py  Example_loading_data.py  Mie_Scattering.py  server_data_settings.json  tracer_ARM_data.py
docs/examples/data/CPC_3010_data/: CPC_3010_data_20220701_Jul.csv  CPC_3010_data_20220702_Jul.csv  CPC_3010_data_20220709_Jul.csv
docs/examples/data/SMPS_data/: 2022-07-02_095141_SMPS.csv
docs/working_temp/: agu_processing.py  example_netcdf.py  example_text.py  kappa_BC_coated.py  kappa_calc.py  lake_settings.json  surface_tension.py  tracer_analysis.py  tracer_graphs.py  tracer_load.py  tracer_runner.py
docs/working_temp/Chamber/: wall_loss.py  wall_loss_20230925.py  wall_loss_20230926.py  wall_loss_20230926b.py
docs/working_temp/EPCAPE_temp/: quick_plot.py
examples/: agu_figures.py  agu_figures.txt  agu_processing.py  tracer_ARM_data.py  tracer_load.py  tracer_load.txt
template/: __init__.py
template/test/: test.py
