[project]
name = "datacula"
description = "a python package for atmospheric particle-gas data analysis and visualization"
readme = "readme"
requires-python = ">=3.9"
license = {file = "license"}
authors = [
    {name = "ngam", email="ngam@users.noreply.github.com"},
    {name = "Gorkowski", email="Gorkowski@users.noreply.github.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
keywords = [
    "atmospheric", "particles", "climate", "aerosol", "particulate",
    "parcel", "clouds", "datacula", "scheduler"
]

dependencies = [
    "matplotlib", "numpy", "scipy", "ipython", "tqdm",
    "PyMieScatt", "particula",
]

# This is set automatically by flit using `datacula.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/uncscode/datacula"
repository = "https://github.com/uncscode/datacula"

[project.optional-dependencies]
dev = [
    "pylint", "pytest", "autopep8", "jupyterlab", "pytype",
    "typing", "build", "flake8", "jupyter-book", "ghp-import", "ipykernel",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
